force-app/main/default/objects/HAM_HDAF_Distributions__c/HAM_HDAF_Distributions__c.object-meta.xml
<CustomObject>
    <description>Distributions from HDAF funds/accounts</description>
    <label>HDAF Distribution</label>
    <nameField>
        <displayFormat>HD-{00000}</displayFormat>
        <label>HDAF Distributions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HDAF Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>