force-app/main/default/objects/HAM_HDAF_Distributions__c/fields/HAM_Designation__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designation__c</fullName>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>HDAF Distributions</relationshipLabel>
    <relationshipName>HDAF_Distributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>