force-app/main/default/objects/HAM_HDAF_Distributions__c/fields/HAM_Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Distribution_Amount__c</fullName>
    <label>Distribution Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>