force-app/main/default/objects/HAM_HDAF_Distributions__c/fields/HAM_Distribution_Comments__c.field-meta.xml
<CustomField>
    <fullName>HAM_Distribution_Comments__c</fullName>
    <label>Distribution Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>