force-app/main/default/objects/HAM_HDAF_Distributions__c/fields/HAM_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Distribution_Date__c</fullName>
    <label>Distribution Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>