force-app/main/default/objects/HAM_HDAF_Distributions__c/fields/HAM_Recipient_Organization__c.field-meta.xml
<CustomField>
    <fullName>HAM_Recipient_Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recipient Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HDAF Distributions</relationshipLabel>
    <relationshipName>HDAF_Distributions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>